#Preamble
CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(
    Dummy
    VERSION 0.0.1
    DESCRIPTION "Default cpp project template"
    LANGUAGES CXX
)


#Compiler Options
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)


# Dependencies
INCLUDE(FetchContent)
FETCHCONTENT_DECLARE(
    googletest
    URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
    DOWNLOAD_EXTRACT_TIMESTAMP true
)
FETCHCONTENT_MAKEAVAILABLE(googletest)


#Build Library
FILE(GLOB_RECURSE LIB_SOURCES src/lib/*.cpp)
FILE(GLOB_RECURSE LIB_HEADERS include/*.h)
ADD_LIBRARY(lib_${PROJECT_NAME} ${LIB_SOURCES})
TARGET_INCLUDE_DIRECTORIES(lib_${PROJECT_NAME} PUBLIC include)
TARGET_INCLUDE_DIRECTORIES(lib_${PROJECT_NAME} PRIVATE src/lib)
SET_TARGET_PROPERTIES(lib_${PROJECT_NAME} PROPERTIES 
    OUTPUT_NAME ${PROJECT_NAME}
    ARCHIVE_OUTPUT_DIRECTORY lib
    LIBRARY_OUTPUT_DIRECTORY lib
    RUNTIME_OUTPUT_DIRECTORY lib
)


#Build Tests
ENABLE_TESTING()
FILE(GLOB_RECURSE UNIT_TEST_SOURCES test/unit/*.cpp)
ADD_EXECUTABLE(UTEST_${PROJECT_NAME} ${UNIT_TEST_SOURCES})
TARGET_LINK_LIBRARIES(UTEST_${PROJECT_NAME} PRIVATE 
    GTest::gtest_main 
    lib_${PROJECT_NAME}
)
SET_TARGET_PROPERTIES(UTEST_${PROJECT_NAME} PROPERTIES 
    RUNTIME_OUTPUT_DIRECTORY test
)
SET_TARGET_PROPERTIES(gtest gtest_main gmock gmock_main PROPERTIES 
    ARCHIVE_OUTPUT_DIRECTORY gtest
    LIBRARY_OUTPUT_DIRECTORY gtest
)


#Build App
FILE(GLOB_RECURSE SOURCES src/app/*.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC lib_${PROJECT_NAME})
ADD_DEPENDENCIES(${PROJECT_NAME} lib_${PROJECT_NAME})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES 
    RUNTIME_OUTPUT_DIRECTORY bin
)


#collect tests
INCLUDE(GoogleTest)
GTEST_DISCOVER_TESTS(UTEST_${PROJECT_NAME})
ADD_CUSTOM_TARGET(tests
    export GTEST_COLOR=1
    COMMAND ctest --output-on-failure --progress)
